transmuxing-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmuxing-httproute
spec:
  parentRefs:
  - name: my-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /streams/live/
      method: DELETE
    backendRefs:
    - name: transmuxing-service
      port: 8000
